# 8c_zone_1

convection/: .gitignore  Doxyfile
convection/Src/: Driver_Steady_TH_Solver.f90  Driver_TH_Input.f90  Driver_TH_Output.f90  Global_TH_Constants_Denfinition.f90  Global_TH_Variables_Denfinition.f90  Helium_Characteristic_Number_Calculation.f90  Helium_Flow_Solver.f90  Helium_Physical_Properties_Calculation.f90  Helium_Temperature_Solver.f90  Panda_Thermix.f90  TH_Composition_Header.f90  TH_Mathmatical_Calculation.f90  TH_Mesh_Header.f90
documents/: 公式推导 1.15.docx  温度推导 旧.docx
documents/per/: 2023.12.11进度.docx  导热模块 流程图.vsdx  日志.docx  温度推导 新.docx
src/: DriverTHInput.f90  dataprocess.f90  driverSteadyTSsolver.f90  globalTSconstants.f90  globalTSvariables.f90
workstation/: Panda_thermix_solid.f90  driverSteadyTSsolver.f90  driverTSoutput.f90  driverthinput_test1.f90  globalTSconstants.f90  globalTSvariables.f90
workstation/test0/: CMakeLists.txt  Panda_thermix_solid.f90  dataprocess.f90  dataprocess.mod  driverSteadyTSsolver.f90  driverTSoutput.f90  driverthinput.mod  driverthinput_test1.f90  drivertsoutput.mod  globalTSconstants.f90  globalTSvariables.f90  globaltsconstants.mod  globaltsvariables.mod
workstation/test0/src/: CMakeLists.txt  dataprocess.f90  dataprocess.mod  driverSteadyTSsolver.f90  driverSteadyTSsolver_undone  driverTSoutput.f90  driver_input_test.mod  driversteadytssolver.mod  driverthinput_test1.f90  drivertsoutput.mod  globalTSconstants.f90  globalTSvariables.f90  globaltsconstants.mod  globaltsvariables.mod  program_main.f90
workstation/test0/unitTest/: CMakeLists.txt  test_solver.f90
(+3 files in other folders)
